# daily-creative

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker-compose.override.yml  docker-compose.staging.yml  docker-compose.yml  railway.toml
backend/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/auth/: deps.py  jwt.py
backend/app/core/: clock.py  errors.py  logging.py  middleware.py  pagination.py  request_context.py  settings.py  usernames.py
backend/app/creative_types/: __init__.py  registry.py  sketch.py  story.py
backend/app/db/: session.py
backend/app/jobs/: deleted_media_cleanup.py  sketch_session_cleanup.py  story_session_cleanup.py
backend/app/media/: processing.py
backend/app/models/: __init__.py  activity_event.py  creative_publication.py  creative_type_preferences.py  enums.py  idempotency_key.py  moderation_action.py  (+15 more)
backend/migrations/: env.py
backend/scripts/: dev-entrypoint.sh  new_migration.sh  start.sh
backend/tests/: fake_storage.py  test_descope_verifier.py  test_errors.py  test_feed.py  test_health.py  test_health_contract.py  test_image_processing_unit.py  test_me.py  test_minio_storage.py  test_moderation_phase11.py  test_phase13.py  test_profile.py  test_profile_preferences_unit.py  test_profiles_phase10.py  test_prompts.py  test_request_id.py  test_safety_phase11.py  test_settings.py  test_sketch_sessions.py  test_social.py  test_streaks_unit.py  test_uploads_submissions.py  test_usernames.py
(+216 files in other folders)
